# AgentBenchPlatform

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
agentbenchplatform/: __init__.py  __main__.py  cli.py  config.py  context.py  remote_context.py
agentbenchplatform/commands/: _helpers.py  config_cmd.py  coordinator_cmd.py  dashboard_cmd.py  memory_cmd.py  research_cmd.py  server_cmd.py  session_cmd.py  signal_cmd.py  task_cmd.py
agentbenchplatform/infra/: git.py  subprocess_mgr.py  whisper_client.py
agentbenchplatform/infra/agents/: base.py  claude_code.py  claude_local.py  opencode.py  (+2 more)
agentbenchplatform/models/: agent.py  agent_event.py  conversation_summary.py  coordinator_decision.py  memory.py  merge_record.py  playbook.py  provider.py  research.py  session.py  session_metric.py  session_report.py  task.py  usage.py  workspace.py
agentbenchplatform/services/: coordinator_service.py  dashboard_service.py  embedding_service.py  memory_service.py  research_service.py  routing.py  session_service.py  signal_service.py  task_service.py
agentbenchplatform/ui/: app.py
scripts/: agentbenchplatform.service  migrate_embeddings.py  start.sh  stop.sh
tests/test_infra/: test_agents.py  test_config.py  test_providers.py
tests/test_models/: test_agent.py  test_memory.py  test_merge_record.py  test_playbook.py  test_provider.py  test_research.py  test_session.py  test_session_metric.py  test_task.py
tests/test_services/: test_coordinator_service.py  test_dashboard_service.py  test_memory_service.py  test_task_service.py
(+65 files in other folders)
