[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbenchplatform"
version = "0.1.0"
description = "Agent workbench platform with server/client architecture"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "textual>=0.50",
    "motor>=3.3",
    "pymongo>=4.6",
    "httpx>=0.27",
    "anthropic>=0.40",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "pydantic>=2.0",
    "watchfiles>=0.20",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
agentbenchplatform = "agentbenchplatform.cli:cli"
abp = "agentbenchplatform.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
